# advanced-power-forecast

./: .env.sample  .env.sample.yaml  .gitignore  Dockerfile  Makefile  README.md  deprecated_setup.py  env.sample  power.json  pyproject.toml  requirements.txt  requirements_google_cloud.txt  setup.py
advanced_power_forecast.egg-info/: PKG-INFO  SOURCES.txt
notebooks/: Ali_pv_test.ipynb  Ali_pv_weather_test.ipynb  Ali_wind_test.ipynb  X_train.npy  ali_test.ipynb  arima.ipynb  cloud_storage.ipynb  cross_val.ipynb  energy-charts_Electricity_production_and_spot_prices_in_Germany_in_week_27_2024.csv  energy-charts_Forecasts_and_actual_values_in_Germany_in_October_2024.csv  energy-charts_Forecasts_and_actual_values_in_Germany_in_week_27_2024.csv  forecast_with_gap.ipynb  hoernsch.ipynb  hoernsch_data_cleaning.ipynb  jerome_arima_notebook.ipynb  jerome_forecast_feature.ipynb  jerome_preprocess_and_train_template.ipynb  jerome_test_API.ipynb  jerome_test_RNN_apf_project.ipynb  jerome_test_mean_baseline.ipynb  jerome_working_notebook.ipynb  model_tuning.ipynb  performance.json  plots_talk.ipynb  processing.ipynb  test_main.ipynb  time_series.ipynb  time_series_forecast.ipynb  time_series_pv.ipynb  val_performance.json  weather_temperature_recap.ipynb  y_train.npy  y_train_full.npy
power/: params.py  utils.py
power/api/: fast.py
power/interface/: main.py
power/ml_ops/: cross_val.py  data.py  model.py  registry.py
ui/: app.py
