[tool.poetry]
name = "power"
version = "0.3.0"
description = "Application aiming at predicting the day ahead photovoltaic (PV) electricity production"
authors = ["jerome roeser <jerome.roeser@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.6"
streamlit = "^1.39.0"
folium = "^0.18.0"
streamlit-folium = "^0.23.1"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
colorama = "^0.4.6"
tensorboard = "2.12.0"
tensorflow = "2.12.0"
google-api-core = "^2.21.0"
google-cloud-core = "^2.4.1"
google-cloud-bigquery = "^3.26.0"
google-cloud-storage = "^2.18.2"
db-dtypes = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
